fixed color contrast on buttons

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body {
   border: none;
   border-radius: 5px;
   background-color: #FFE66D;
-  color: #6CA6C1;
+  color: #2F3061;
   padding: 10px 30px;
   margin: 20px auto 20px;
   letter-spacing: 2px;
@@ -166,7 +166,7 @@ body {
   border: none;
   border-radius: 5px;
   background-color: #FFE66D;
-  color: #6CA6C1;
+  color: #2F3061;
   padding: 10px 30px;
   margin: 20px auto 20px;
   letter-spacing: 2px;
